--- a/Client/twiths_/Storyboard/Tour.storyboard
+++ b/Client/twiths_/Storyboard/Tour.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IeA-wt-GRB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IeA-wt-GRB">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -285,7 +285,7 @@
                     <navigationItem key="navigationItem" title="인증하기" id="kCh-qk-iES">
                         <barButtonItem key="rightBarButtonItem" title="완료" id="H5b-TK-v6S">
                             <connections>
-                                <segue destination="s4E-LD-Dvf" kind="unwind" identifier="locationCertificateDone" unwindAction="TourListToLandmarkInfoWithSegue:" id="2pl-eK-755"/>
+                                <segue destination="s4E-LD-Dvf" kind="unwind" identifier="locationCertificateDone" unwindAction="TourListToLandmarkInfoWithSender:" id="X0n-Cn-2ei"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
