--- a/Client/twiths_/Storyboard/TourInfoNotProceed.storyboard
+++ b/Client/twiths_/Storyboard/TourInfoNotProceed.storyboard
@@ -269,37 +269,38 @@
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TourInfoMReview" rowHeight="70" id="VoF-7k-XdR" customClass="TourInfoMReview" customModule="twiths_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="467" width="375" height="70"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TourInfoMReview" rowHeight="95" id="VoF-7k-XdR" customClass="TourInfoMReview" customModule="twiths_" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="467" width="375" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VoF-7k-XdR" id="wC6-bm-XOd">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="94.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bz3-t6-aOy">
-                                            <rect key="frame" x="16" y="5" width="81" height="60"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Review label 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKM-NE-R9Q">
-                                            <rect key="frame" x="107" y="38" width="252" height="21"/>
+                                            <rect key="frame" x="16" y="51" width="343" height="34"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Review label 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5V-SQ-c4F">
-                                            <rect key="frame" x="107" y="11" width="252" height="21"/>
+                                            <rect key="frame" x="16" y="8" width="252" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nWG-PM-TB6" customClass="CosmosView" customModule="Cosmos">
+                                            <rect key="frame" x="16" y="28" width="125" height="25"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </view>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="ReviewImg" destination="Bz3-t6-aOy" id="dq0-Ea-rjz"/>
                                     <outlet property="ReviewSubtitle" destination="XKM-NE-R9Q" id="Rzl-1X-Aa1"/>
                                     <outlet property="ReviewTitle" destination="R5V-SQ-c4F" id="us1-hs-bfC"/>
+                                    <outlet property="StarRating" destination="nWG-PM-TB6" id="Aif-jP-lgm"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
