--- a/Client/twiths_/Storyboard/Jjim.storyboard
+++ b/Client/twiths_/Storyboard/Jjim.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -81,11 +81,11 @@
             </objects>
             <point key="canvasLocation" x="1766" y="126"/>
         </scene>
-        <!--찜목록-->
+        <!--찜-->
         <scene sceneID="Db5-uK-TRW">
             <objects>
                 <navigationController storyboardIdentifier="Jjim" useStoryboardIdentifierAsRestorationIdentifier="YES" id="twK-6Y-2F8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="찜목록" id="zr1-5f-M3S"/>
+                    <tabBarItem key="tabBarItem" title="찜" image="Jjim-icon" selectedImage="Jjim-icon" id="zr1-5f-M3S"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ggL-g2-aaf">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -100,4 +100,7 @@
             <point key="canvasLocation" x="-303" y="127"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Jjim-icon" width="36" height="36"/>
+    </resources>
 </document>
