--- a/Client/twiths_/Storyboard/Search.storyboard
+++ b/Client/twiths_/Storyboard/Search.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ats-oK-azM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ats-oK-azM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -77,11 +77,11 @@
             </objects>
             <point key="canvasLocation" x="1250" y="74"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--검색-->
         <scene sceneID="Gbj-G7-LOy">
             <objects>
                 <navigationController id="ats-oK-azM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="search" id="rnz-eb-ceG"/>
+                    <tabBarItem key="tabBarItem" title="검색" image="search-icon" id="rnz-eb-ceG"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zAr-Lj-OFH">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -96,4 +96,7 @@
             <point key="canvasLocation" x="-803" y="75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="search-icon" width="36" height="36"/>
+    </resources>
 </document>
