--- a/Client/twiths_/Storyboard/Tour.storyboard
+++ b/Client/twiths_/Storyboard/Tour.storyboard
@@ -563,5 +563,18 @@
             </objects>
             <point key="canvasLocation" x="5046" y="-882"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="DeC-je-KNE">
+            <objects>
+                <viewController id="mif-Sp-gXs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WZB-yp-EDg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GCq-F6-S3P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
 </document>
